Fix bandcamp embed spacing

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -416,7 +416,7 @@ main > p:first-of-type cite {
 }
 
 .embed-bandcamp-standard {
-    margin-bottom: 2em;
+    margin: 2em 0;
 }
 
 
